--- a/styles/main.css
+++ b/styles/main.css
@@ -167,7 +167,7 @@ body {
     height: 100%;
     background-color: rgba(77, 150, 169, 0.8);
     padding: 6.4rem 3.2rem;
-    z-index: -1;
+    z-index: 1;
     gap: 2.4rem; }
   .footer .overlay__title {
     font-size: 3.2rem;
